--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>🍔 Hamburgueria Lages</h1>
         </div>
         <div class="chat-box" id="chat-box">
-            <div class="message bot-message">Olá! Eu sou o Garçom Digital. Digite "cardápio" para ver nossas opções deliciosas!</div>
+            <div class="message bot-message">Olá! Eu sou o Atendente Virtual. Digite "cardápio" para ver nossas opções deliciosas!</div>
         </div>
        <div class="chat-input">
     <input type="text" id="user-input" placeholder="Digite sua mensagem..." />
